--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
       - static_value:/app/static/
       - media_value:/app/media/
       - ../fixtures.json:/app/fixtures.json
+    command: -c "chown root:root fixtures.json && chmod =666 fixtures.json"
     depends_on:
       - db
     env_file:
